Fix contrast for links

--- a/themes/jaydenm/assets/css/theme.css
+++ b/themes/jaydenm/assets/css/theme.css
@@ -12,7 +12,7 @@ body {
     flex-direction: column;
 }
 a {
-    color: #1d91d0;
+    color: #065ED5;
     transition: all linear 0.15s;
     text-decoration: underline 0.075rem rgba(0, 0, 0, 0);
     text-underline-offset: 0.35rem;
@@ -67,7 +67,7 @@ hr {
 }
 
 nav {
-    border-top: 0.35rem solid #1d91d0;
+    border-top: 0.35rem solid #065ED5;
     background-color: #FFF;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.075);
 }
@@ -88,7 +88,7 @@ nav a {
     display: inline-block;
 }
 nav a:hover {
-    text-decoration-color: #1d91d0;
+    text-decoration-color: #065ED5;
 }
 nav a img {
     width: 1.5rem;
@@ -168,7 +168,7 @@ nav a img {
     color: #363636;
 }
 .post-heading a:hover {
-    text-decoration: underline 0.075rem #1d91d0;
+    text-decoration: underline 0.075rem #065ED5;
 }
 .post-heading .post-heading-image {
     height: 15rem;
@@ -224,7 +224,7 @@ nav a img {
     color: #000;
 }
 .sidebar .sidebar-title:hover {
-    text-decoration: underline 0.075rem #1d91d0;
+    text-decoration: underline 0.075rem #065ED5;
 }
 .sidebar .sidebar-title h2 {
     margin: 0 auto;
@@ -253,7 +253,7 @@ nav a img {
 }
 .post-card:hover > h4,
 .post-card:hover > p {
-    text-decoration: underline 0.075rem #1d91d0;
+    text-decoration: underline 0.075rem #065ED5;
 }
 .post-card p {
     color: #AAA;
@@ -281,7 +281,7 @@ nav a img {
     transition: fill linear 0.15s;
 }
 .social-links a:hover svg {
-    fill: #1d91d0;
+    fill: #065ED5;
 }
 .social-links svg {
     width: 1.4rem;
